# acv

./: CMakeLists.txt  README.md  user.cmake.sample
acv/: CMakeLists.txt  acv.cpp  acv.h  acv_config.cpp  acv_config.h  cable_info.cpp  cable_info.h  ffmpeg_link.cpp  gui.cpp  gui.h  inst_graph.cpp  inst_graph.h  inst_info.cpp  inst_info.h  livemedia_link.cpp  main.cpp  mainwindow.ui  opencv_link.cpp  plugin_factory.cpp  plugin_factory.h  script_if.cpp  script_if.h  version.h
cmake/: BundleUtilities.cmake  acv.vcxproj.user.in
plugin/: CMakeLists.txt  acv_plugin.h
plugin/ffld_detector/: CMakeLists.txt  detector.cpp  detector.h  ffld_detector.cpp  ffld_detector.h  ui.ui
plugin/ffld_detector/ffld/: CMakeLists.txt  Detection.h  HOGPyramid.cpp  HOGPyramid.h  Mixture.cpp  Mixture.h
plugin/ffld_detector/model/: myautonewbm3.txt
plugin/frame_in/: CMakeLists.txt  frame_in.cpp  frame_in.h  frame_in.ui  frame_source.h
plugin/frame_in/rtsp/: FFmpegCapture.cpp  FFmpegCapture.hpp  H264DecoderSink.cpp  H264DecoderSink.h  rtsp_handlers.cpp  rtsp_source.cpp  rtsp_source.h  sched_thread.h
plugin/frame_in/rtsp_h264/: rtsp_h264_source.cpp  rtsp_h264_source.h
plugin/frame_in/rtsp_mjpg/: rtsp_source.cpp  rtsp_source.h
plugin/frame_in/video/: video_source.cpp  video_source.h
plugin/frame_out/: CMakeLists.txt  frame_out.cpp  frame_out.h  frame_out.ui  frame_sink.h
plugin/frame_out/video/: video_sink.cpp  video_sink.h
plugin/imagefeed/: CMakeLists.txt  imagefeed.cpp  imagefeed.h  imagefeed.ui
plugin/imageshow/: CMakeLists.txt  imageshow.cpp  imageshow.h  imageshow.ui
plugin/noob_md/: CMakeLists.txt  DLBPUtilities.h  md_worker.cpp  md_worker.h  noob_md.cpp  noob_md.h  noob_md.ui  utilities.cpp  utilities.h
sample/: CMakeLists.txt  acv.lua  acv.xml
