CMAKE_MINIMUM_REQUIRED ( VERSION 3.1 )

# Set output directories for components
STRING ( TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/devbuild )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugin )
SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${BUILD_TYPE} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugin )

# Set installation directory
SET ( CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install"
	CACHE PATH "Installation directory" )

PROJECT ( acv CXX C)

INCLUDE ( user.cmake )

# System architecture
MESSAGE ( STATUS "System: ${CMAKE_SYSTEM_NAME}" )
MESSAGE ( STATUS "CPU: ${CMAKE_SYSTEM_PROCESSOR}" )

# Threadlib
#FIND_PACKAGE ( Threads REQUIRED )

# Boost
SET ( Boost_USE_STATIC_LIBS     ON )
SET ( Boost_USE_MULTITHREADED   ON )
SET ( Boost_NO_SYSTEM_PATHS     ON )
FIND_PACKAGE ( Boost 1.57.0
    COMPONENTS
        date_time filesystem system thread program_options
    REQUIRED )

# Qt5
FIND_PACKAGE ( Qt5 5.4.1 REQUIRED Widgets )
GET_TARGET_PROPERTY ( Qt5Core_LIBPATH Qt5::Core LOCATION )
GET_FILENAME_COMPONENT ( Qt5_LIBDIR ${Qt5Core_LIBPATH} DIRECTORY )

# OpenCV
FIND_PACKAGE ( OpenCV 2.4.10 REQUIRED )
GET_TARGET_PROPERTY ( OpenCVCore_LIBPATH opencv_core IMPORTED_LOCATION_${BUILD_TYPE} )
GET_FILENAME_COMPONENT ( OpenCV_LIBDIR ${OpenCVCore_LIBPATH} DIRECTORY )

SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )

# Components
ADD_SUBDIRECTORY ( acv )
ADD_SUBDIRECTORY ( plugin )
ADD_SUBDIRECTORY ( sample )

# Packaging
SET ( CPACK_GENERATOR STGZ )
SET ( CPACK_PACKAGE_NAME				"acv" )
SET ( CPACK_PACKAGE_VERSION				"1.0.0")
SET ( CPACK_PACKAGE_FILE_NAME			"${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
SET ( CPACK_PACKAGE_VENDOR				"KAI Square Pte Ltd" )
SET ( CPACK_PACKAGE_DESCRIPTION_SUMMARY	"A Video Content Analysis Tool" )
SET ( CPACK_COMPONENTS_ALL				acv )
INCLUDE ( CPack )

