SET ( MOD_NAME imagefeed )

# Configure Qt5.
SET ( CMAKE_AUTOMOC ON )
SET ( CMAKE_INCLUDE_CURRENT_DIR ON )

INCLUDE_DIRECTORIES (
	../
	${OpenCV_INCLUDE_DIRS}
	${Qt5Widgets_INCLUDE_DIRS} )

LINK_DIRECTORIES (
	${OpenCV_LIB_DIR} )

QT5_WRAP_UI ( QT_UI_HEADERS imagefeed.ui )
SET ( HEADER_FILES ${QT_UI_HEADERS}
		imagefeed.h )
SET ( SOURCE_FILES
		imagefeed.cpp )

ADD_DEFINITIONS ( -DQT_PLUGIN )

# Fix RPATH
IF ( UNIX )
	SET ( CMAKE_SKIP_BUILD_RPATH FALSE )
	SET ( CMAKE_BUILD_WITH_INSTALL_RPATH FALSE )
	SET ( CMAKE_INSTALL_RPATH "\$ORIGIN:\$ORIGIN/.." )
	SET ( CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE )
ENDIF()

IF ( WIN32 )
	SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${BUILD_TYPE} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} )
ENDIF()

ADD_LIBRARY ( ${MOD_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} )
QT5_USE_MODULES ( ${MOD_NAME} Widgets )

TARGET_LINK_LIBRARIES ( ${MOD_NAME}
	${OpenCV_LIBRARIES} )

IF ( WIN32 )
	INSTALL ( TARGETS ${MOD_NAME}
				RUNTIME DESTINATION plugin
				COMPONENT ${MOD_NAME} )
ELSE()
	INSTALL ( TARGETS ${MOD_NAME}
				LIBRARY DESTINATION plugin
				COMPONENT ${MOD_NAME} )
ENDIF()