SET ( MOD_NAME imageshow )

# Configure Qt5.
SET ( CMAKE_AUTOMOC ON )
SET ( CMAKE_INCLUDE_CURRENT_DIR ON )

INCLUDE_DIRECTORIES (
	../
	${OpenCV_INCLUDE_DIRS}
	${Qt5Widgets_INCLUDE_DIRS} )

LINK_DIRECTORIES (
	${OpenCV_LIBDIR} )

QT5_WRAP_UI ( QT_UI_HEADERS imageshow.ui )
SET ( HEADER_FILES ${QT_UI_HEADERS}
		imageshow.h )
SET ( SOURCE_FILES
		imageshow.cpp )

SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} )

ADD_DEFINITIONS ( -DQT_PLUGIN )

# Fix RPATH
SET ( CMAKE_SKIP_BUILD_RPATH FALSE )
SET ( CMAKE_BUILD_WITH_INSTALL_RPATH FALSE )
SET ( CMAKE_INSTALL_RPATH "\$ORIGIN:\$ORIGIN/.." )
SET ( CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE )

ADD_LIBRARY ( ${MOD_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} )
QT5_USE_MODULES ( ${MOD_NAME} Widgets )

TARGET_LINK_LIBRARIES ( ${MOD_NAME} ${OpenCV_LIBRARIES} )

INSTALL ( TARGETS ${MOD_NAME}
			LIBRARY DESTINATION plugins
			COMPONENT ${MOD_NAME} )
